--- a/main_page/css/style.css
+++ b/main_page/css/style.css
@@ -331,6 +331,57 @@ h1, h2, h3, h4, h5, h6 {
   background-image: linear-gradient(120deg, rgba(255, 111, 83, 0.4), #eeffcd 100%);
 }
 
+.future-professions {
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), linear-gradient(106deg, #eeffcd 0%, #98a9ef 52%, #eb8fe2);
+  padding: 50px 0 0 0;
+}
+.future-professions__row {
+  display: flex;
+}
+.future-professions__info {
+  flex: 0 0 30%;
+  padding: 0 30px 0 0;
+}
+.future-professions__title {
+  color: #fff;
+  font-size: 44px;
+  padding: 0 0 30px 0;
+}
+.future-professions__subtitle {
+  font-size: 14px;
+  color: #fff;
+}
+.future-professions__profession-card-row {
+  display: flex;
+  flex-wrap: wrap-reverse;
+  justify-content: center;
+  margin: 0 -20px;
+}
+.future-professions__profession-card {
+  padding: 0 20px 50px 20px;
+  flex: 0 0 33.3%;
+}
+
+.profession-card__img {
+  position: relative;
+}
+.profession-card__img img {
+  border-radius: 20px 20px 0 0;
+  width: 100%;
+  height: 120px;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+}
+.profession-card__profession {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 0 0 20px 20px;
+  padding: 5px 0;
+  color: #fff;
+  font-size: 12px;
+  text-align: center;
+}
+
 body {
   font-family: "Comfortaa", sans-serif;
 }
