--- a/main_page/scss/body.scss
+++ b/main_page/scss/body.scss
@@ -181,3 +181,56 @@
     background-image: linear-gradient(120deg, rgba(255, 111, 83, 0.4), #eeffcd 100%);
   }
 }
+
+.future-professions {
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), linear-gradient(106deg, #eeffcd 0%, #98a9ef 52%, #eb8fe2);
+  padding: 50px 0 0 0;
+  &__row {
+    display: flex;
+  }
+  &__info {
+    flex: 0 0 30%;
+    padding: 0 30px 0 0;
+  }
+  &__title {
+    color: #fff;
+    font-size: 44px;
+    padding: 0 0 30px 0;
+  }
+  &__subtitle {
+    font-size: 14px;
+    color: #fff;
+  }
+  &__profession-card-row {
+    display: flex;
+    flex-wrap: wrap-reverse;
+    justify-content: center;
+    margin: 0 -20px;
+  }
+  &__profession-card {
+    padding: 0 20px 50px 20px;
+    flex: 0 0 33.3%
+  }
+}
+
+.profession-card {
+  &__img {
+    position: relative;
+    img{
+      border-radius: 20px 20px 0 0;
+      width: 100%;
+      height: 120px;
+      top: 0;
+      left: 0;
+      object-fit: cover;
+    }
+  }
+  &__profession {
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 0 0 20px 20px;
+    padding: 5px 0;
+    color: #fff;
+    font-size: 12px;
+    text-align: center;
+  }
+}
