--- a/main_page/scss/header.scss
+++ b/main_page/scss/header.scss
@@ -13,14 +13,16 @@
     padding: 0 22px;
   }
   &__title {
+    font-family: 'Montserrat', sans-serif;
     color: #0b2635;
-    font-size: 72px;
+    font-size: 75px;
+    font-weight: 500;
     padding: 0 0 20px 0;
   }
   &__subtitle {
     color: #0b2635;
-    font-size: 55px;
-    font-weight: lighter;
+    font-size: 44px;
+    font-weight: 500;
   }
   &__cards {
     padding: 0 22px;
@@ -33,6 +35,7 @@
 }
 
 .menu {
+  font-family: 'Montserrat', sans-serif;
   display: flex;
   align-items: center;
   &__logo {
@@ -48,7 +51,7 @@
   &__department {
     margin: -2px;
     font-size: 29px;
-    font-weight: bold;
+    font-weight: 700;
     padding: 0 4px 0 0 ;
   }
   &__speciality {
@@ -56,19 +59,19 @@
     text-orientation: upright;
     letter-spacing: -2px;
     font-size: 7px;
-    font-weight: bold;
-    padding: 0 84px 0 0 ;
+    font-weight: 700;
+    padding: 0 70px 0 0 ;
   }
   &__nav {}
   &__list {
     display: flex;
-    margin: 0 -32px;
+    margin: 0 -20px;
   }
   &__link {
-    font-weight: lighter;
+    font-weight: 500;
     color: #0b2635;
     transition-duration: 0.35s;
-    padding: 10px 32px 10px 32px;
+    padding: 10px 20px 10px 20px;
     &:hover {
       background-color: rgba(227, 228, 248, 0.2);
       box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
