--- a/main_page/scss/style.scss
+++ b/main_page/scss/style.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;700&family=Montserrat:wght@300;400;500;700&display=swap');
 @import "nullstyle";
 @import "header";
 @import "body";
