--- a/main_page/scss/body.scss
+++ b/main_page/scss/body.scss
@@ -219,6 +219,8 @@
 }
 
 .profession-card {
+  display: flex;
+  flex-direction: column;
   &__img {
     position: relative;
     img{
@@ -231,6 +233,7 @@
     }
   }
   &__profession {
+    flex-grow: 1;
     background-color: rgba(0, 0, 0, 0.2);
     border-radius: 0 0 20px 20px;
     padding: 5px 0;
