--- a/main_page/css/style.css
+++ b/main_page/css/style.css
@@ -190,6 +190,7 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
   color: #0b2635;
   font-size: 14px;
+  line-height: 1.2;
   padding: 0 0 28px 0;
 }
 .info-card__button {
@@ -233,6 +234,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0 38px;
   color: #0b2635;
   flex: 0 0 60%;
+  line-height: 1.2;
 }
 .about-department__list li {
   padding: 0 0 25px 0;
@@ -340,7 +342,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .future-professions {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), linear-gradient(106deg, #eeffcd 0%, #98a9ef 52%, #eb8fe2);
-  padding: 50px 0 0 0;
+  padding: 50px 30px 0 30px;
 }
 .future-professions__row {
   display: flex;
@@ -356,8 +358,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 .future-professions__subtitle {
   font-size: 14px;
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 0.75);
   font-weight: 300;
+  line-height: 1.2;
 }
 .future-professions__profession-card-row {
   display: flex;
@@ -395,6 +398,56 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
   text-align: center;
+}
+
+.partners {
+  padding: 140px 30px;
+}
+.partners__title {
+  padding: 0 0 60px 0;
+}
+.partners__col {
+  display: flex;
+  flex-direction: column;
+}
+.partners__company {
+  border-bottom: solid 2px white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.partners__company:first-child {
+  border-radius: 20px 20px 0 0;
+}
+.partners__company:last-child {
+  border-radius: 0 0 20px 20px;
+}
+
+.company {
+  background-color: #e3e4f8;
+}
+.company__img {
+  border-right: solid 2px white;
+  padding: 25px 0;
+  flex: 0 0 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.company__img img {
+  width: 80%;
+  height: 80%;
+  top: 0;
+  left: 0;
+  object-fit: contain;
+}
+.company__text {
+  padding: 0 10px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  color: #0b2635;
+  line-height: 1.5;
 }
 
 body {
