--- a/main_page/css/style.css
+++ b/main_page/css/style.css
@@ -137,6 +137,9 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   padding: 0 70px 0 0;
 }
+.menu__burger {
+  display: none;
+}
 .menu__list {
   display: flex;
   margin: 0 -20px;
@@ -151,6 +154,114 @@ h1, h2, h3, h4, h5, h6 {
   background-color: rgba(227, 228, 248, 0.2);
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   border-radius: 20px;
+}
+@media (max-width: 599px) {
+  .menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+    padding: 20px 30px 0 30px;
+    justify-content: space-between;
+  }
+  .menu__img {
+    position: relative;
+    z-index: 5;
+  }
+  .menu__img img {
+    width: 77px;
+    height: 37px;
+    margin: 0 0 0 -5px;
+  }
+  .menu__department {
+    position: relative;
+    font-size: 45px;
+    z-index: 5;
+  }
+  .menu__speciality {
+    position: relative;
+    font-size: 10px;
+    z-index: 5;
+  }
+  .menu__link {
+    color: white;
+    font-weight: 700;
+  }
+  .menu__list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transform: translate(0, 100%);
+  }
+  .menu__list > li {
+    font-size: 30px;
+    margin: 0 0 50px 0;
+  }
+  .menu__body {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 100px 30px 30px 30px;
+    transition: left 0.3s ease 0s;
+    overflow: auto;
+  }
+  .menu__body._active {
+    left: 0;
+  }
+  .menu__body::before {
+    content: "";
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    height: 70px;
+    background-image: linear-gradient(111deg, #eeffcd 0%, #98a9ef 52%, #eb8fe2 100%);
+  }
+  .menu__burger {
+    z-index: 5;
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 18px;
+    cursor: pointer;
+  }
+  .menu__burger::before, .menu__burger::after, .menu__burger span {
+    left: 0;
+    position: absolute;
+    height: 10%;
+    width: 100%;
+    transition: all 0.3s ease 0s;
+    background-color: black;
+  }
+  .menu__burger::before, .menu__burger::after {
+    content: "";
+  }
+  .menu__burger::before {
+    top: 0;
+  }
+  .menu__burger::after {
+    bottom: 0;
+  }
+  .menu__burger span {
+    top: 50%;
+    transform: scale(1) translate(0px, -50%);
+  }
+  .menu__burger._active span {
+    transform: scale(0) translate(0px, -50%);
+  }
+  .menu__burger._active::before {
+    top: 50%;
+    transform: rotate(-45deg) translate(0, -50%);
+  }
+  .menu__burger._active::after {
+    bottom: 50%;
+    transform: rotate(45deg) translate(0, 50%);
+  }
 }
 
 .body {
@@ -504,6 +615,9 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
   font-family: "Comfortaa", sans-serif;
+}
+body._lock {
+  overflow: hidden;
 }
 
 .wrapper {
