--- a/main_page/scss/header.scss
+++ b/main_page/scss/header.scss
@@ -1,3 +1,19 @@
+@mixin for-phone-only {
+  @media (max-width: 599px) { @content; }
+}
+@mixin for-tablet-portrait-up {
+  @media (min-width: 600px) { @content; }
+}
+@mixin for-tablet-landscape-up {
+  @media (min-width: 900px) { @content; }
+}
+@mixin for-desktop-up {
+  @media (min-width: 1200px) { @content; }
+}
+@mixin for-big-desktop-up {
+  @media (min-width: 1800px) { @content; }
+}
+
 .header {
   padding: 20px 30px 100px 30px;
   background-image: linear-gradient(111deg, #eeffcd 0%, #98a9ef 52%, #eb8fe2 100%);
@@ -62,7 +78,10 @@
     font-weight: 700;
     padding: 0 70px 0 0 ;
   }
-  &__nav {}
+  &__burger {
+    display: none;
+  }
+  &__body {}
   &__list {
     display: flex;
     margin: 0 -20px;
@@ -76,6 +95,114 @@
       background-color: rgba(227, 228, 248, 0.2);
       box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
       border-radius: 20px;
+    }
+  }
+  @include for-phone-only {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+    padding: 20px 30px 0 30px;
+    justify-content: space-between;
+    &__img {
+      position: relative;
+      z-index: 5;
+      img {
+        width: 77px;
+        height: 37px;
+        margin: 0 0 0 -5px;
+      }
+    }
+    &__department {
+      position: relative;
+      font-size: 45px;
+      z-index: 5;
+    }
+    &__speciality {
+      position: relative;
+      font-size: 10px;
+      z-index: 5;
+    }
+    &__link {
+      color: white;
+      font-weight: 700;
+    }
+    &__list {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      transform: translate(0, 100%);
+      & > li {
+        font-size: 30px;
+        margin: 0 0 50px 0;
+      }
+    }
+    &__body {
+      position: fixed;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.8);
+      padding: 100px 30px 30px 30px;
+      transition: left 0.3s ease 0s;
+      overflow: auto;
+      &._active {
+        left: 0;
+      }
+      &::before {
+        content: "";
+        position: fixed;
+        width: 100%;
+        top: 0;
+        left: 0;
+        height: 70px;
+        background-image: linear-gradient(111deg, #eeffcd 0%, #98a9ef 52%, #eb8fe2 100%);
+      }
+    }
+    &__burger {
+      z-index: 5;
+      display: block;
+      position: relative;
+      width: 30px;
+      height: 18px;
+      cursor: pointer;
+      &::before, &::after, span {
+        left: 0;
+        position: absolute;
+        height: 10%;
+        width: 100%;
+        transition: all 0.3s ease 0s;
+        background-color: black
+      }
+      &::before, &::after {
+        content: "";
+      }
+      &::before {
+        top: 0;
+      }
+      &::after {
+        bottom: 0;
+      }
+      span {
+        top: 50%;
+        transform: scale(1) translate(0px, -50%);
+      }
+      &._active {
+        & span {
+          transform: scale(0) translate(0px, -50%);
+        }
+        &::before {
+          top: 50%;
+          transform: rotate(-45deg) translate(0, -50%);
+        }
+        &::after {
+          bottom: 50%;
+          transform: rotate(45deg) translate(0, 50%);
+        }
+      }
     }
   }
 }
