--- a/main_page/scss/body.scss
+++ b/main_page/scss/body.scss
@@ -1,3 +1,16 @@
+@mixin for-phone-only {
+  @media (max-width: 599px) { @content; }
+}
+@mixin for-tablet-portrait-up {
+  @media (max-width: 900px) { @content; }
+}
+@mixin for-tablet-landscape-up {
+  @media (max-width: 1200px) { @content; }
+}
+@mixin for-desktop-up {
+  @media (min-width: 1201px) { @content; }
+}
+
 .body {
   flex-grow: 1;
 }
@@ -11,6 +24,29 @@
   &__info-card {
     flex: 0 0 50%;
     padding: 0 90px;
+  }
+
+  @include for-tablet-landscape-up {}
+  @include for-tablet-portrait-up {
+    &__row {
+      margin: 0 -40px;
+    }
+    &__info-card {
+      padding: 0 40px;
+    }
+  }
+  @include for-phone-only {
+    &__row {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    &__info-card {
+      flex: 0 0 70%;
+      padding: 0 0 70px 0;
+      &:last-child {
+        padding: 0;
+      }
+    }
   }
 }
 
@@ -101,6 +137,37 @@
       top: 0;
       left: 0;
       object-fit: cover;
+    }
+  }
+
+  @include for-tablet-landscape-up {}
+  @include for-tablet-portrait-up {
+    &__title {
+      text-align: center;
+    }
+    &__row {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    &__list {
+      flex: 0 0 80%;
+      padding: 0 0 50px 0;
+    }
+    &__img {
+      flex: 0 0 80%;
+      height: 70%;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+  @include  for-phone-only {
+    &__title {
+      font-size: 33px;
+    }
+    &__list {
+      font-size: 16px;
     }
   }
 }
