--- a/main_page/scss/style.scss
+++ b/main_page/scss/style.scss
@@ -26,4 +26,13 @@ body{
   margin: 0 auto;
 }
 
+@media (min-width: 1800px) {
+  .container-for-header {
+    max-width: 1600px;
+  }
+  .container {
+    max-width: 1100px;
+  }
+}
+
 
