--- a/main_page/scss/body.scss
+++ b/main_page/scss/body.scss
@@ -356,6 +356,47 @@
     padding: 0 20px 50px 20px;
     flex: 0 0 33.3%
   }
+
+  @include for-desktop-up {
+    &__title {
+      font-size: 50px;
+      padding: 0 0 50px 0;
+    }
+    &__subtitle {
+      font-size: 16px;
+    }
+  }
+  @include for-tablet-portrait-down {
+    &__title {
+      text-align: center;
+    }
+    &__subtitle {
+      font-size: 16px;
+      padding: 0 0 30px 0;
+    }
+    &__row {
+      flex-direction: column;
+    }
+    &__profession-card-row {
+      margin: 0 -10px;
+    }
+    &__profession-card {
+      padding: 0 10px 50px 10px;
+      flex: 0 0 26%
+    }
+  }
+  @include for-phone-only {
+    &__title {
+      font-size: 35px;
+    }
+    &__profession-card-row {
+      margin: 0 -15px;
+    }
+    &__profession-card {
+      padding: 0 15px 50px 15px;
+      flex: 0 0 50%;
+    }
+  }
 }
 
 .profession-card {
@@ -382,6 +423,24 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     text-align: center;
+  }
+
+  @include for-desktop-up {
+    &__img {
+      img {
+        height: 160px;
+      }
+    }
+  }
+  @include for-tablet-portrait-down {
+    &__img {
+      img {
+        height: 150px;
+      }
+    }
+  }
+  @include for-phone-only {
+
   }
 }
 
