--- a/main_page/css/style.css
+++ b/main_page/css/style.css
@@ -850,6 +850,32 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Montserrat", sans-serif;
   padding: 20px 0 20px 40px;
 }
+@media (min-width: 1800px) {
+  .footer__title {
+    font-size: 20px;
+  }
+  .footer__copyright {
+    font-size: 14px;
+    padding: 20px 0 20px 75px;
+  }
+}
+@media (max-width: 900px) {
+  .footer__title {
+    padding: 30px 0 15px 0;
+  }
+  .footer__img-and-text:last-child {
+    padding: 0 0 20px 0;
+  }
+  .footer__row {
+    flex-wrap: wrap;
+    justify-content: left;
+    padding: 0 40px;
+  }
+  .footer__map {
+    flex: 0 0 100%;
+    padding: 0 0 30px 0;
+  }
+}
 
 .img-and-text {
   display: flex;
@@ -867,6 +893,18 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0 0 10px 0;
   color: #fff;
   font-weight: 300;
+}
+@media (min-width: 1800px) {
+  .img-and-text {
+    padding: 2px 0;
+  }
+  .img-and-text__img img {
+    height: 17px;
+    width: 17px;
+  }
+  .img-and-text__text {
+    font-size: 14px;
+  }
 }
 
 body {
