--- a/main_page/scss/footer.scss
+++ b/main_page/scss/footer.scss
@@ -1,3 +1,16 @@
+@mixin for-phone-only {
+  @media (max-width: 599px) { @content; }
+}
+@mixin for-tablet-portrait-down {
+  @media (max-width: 900px) { @content; }
+}
+@mixin for-tablet-landscape-down {
+  @media (max-width: 1200px) { @content; }
+}
+@mixin for-desktop-up {
+  @media (min-width: 1800px) { @content; }
+}
+
 .footer {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), linear-gradient(103deg, #eeffcd 0%, #98a9ef 52%, #eb8fe2);
   padding: 45px 30px 0 30px;
@@ -29,6 +42,35 @@
     font-family: 'Montserrat', sans-serif;
     padding: 20px 0 20px 40px;
   }
+
+  @include for-desktop-up {
+    &__title {
+      font-size: 20px;
+    }
+    &__copyright {
+      font-size: 14px;
+      padding: 20px 0 20px 75px;
+    }
+  }
+  @include for-tablet-portrait-down {
+    &__title {
+      padding: 30px 0 15px 0;
+    }
+    &__img-and-text {
+      &:last-child {
+        padding: 0 0 20px 0;
+      }
+    }
+    &__row {
+      flex-wrap: wrap;
+      justify-content: left;
+      padding: 0 40px;
+    }
+    &__map {
+      flex: 0 0 100%;
+      padding: 0 0 30px 0;
+    }
+  }
 }
 
 .img-and-text {
@@ -46,5 +88,18 @@
     padding: 0 0 10px 0;
     color: #fff;
     font-weight: 300;
+  }
+
+  @include for-desktop-up {
+    padding: 2px 0;
+    &__img {
+      img {
+        height: 17px;
+        width: 17px;
+      }
+    }
+    &__text {
+      font-size: 14px;
+    }
   }
 }
