--- a/for_applicants/css/style.css
+++ b/for_applicants/css/style.css
@@ -174,6 +174,30 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 20px;
 }
 
+@media (min-width: 1800px) {
+  .menu__img img {
+    width: 60px;
+    height: 30px;
+  }
+  .menu__department {
+    font-size: 34.8px;
+  }
+  .menu__speciality {
+    font-size: 8.4px;
+  }
+  .menu__link {
+    font-size: 16.8px;
+  }
+  .information__text-title {
+    font-size: 75px;
+  }
+  .information__text-text {
+    font-size: 24px;
+  }
+  .information__img img {
+    height: 190px;
+  }
+}
 @media (max-width: 1200px) {
   .menu__img img {
     width: 60px;
@@ -187,6 +211,15 @@ h1, h2, h3, h4, h5, h6 {
   }
   .menu__link {
     font-size: 16.8px;
+  }
+  .information__text-title {
+    font-size: 60px;
+  }
+  .information__text-text {
+    font-size: 16px;
+  }
+  .information__img img {
+    height: 150px;
   }
 }
 @media (max-width: 900px) {
@@ -202,6 +235,28 @@ h1, h2, h3, h4, h5, h6 {
   }
   .menu__link {
     font-size: 18.2px;
+  }
+  .information {
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+  .information__text-title {
+    text-align: center;
+    padding: 0 0 30px 0;
+  }
+  .information__text-text {
+    order: 0;
+    padding: 0 0 30px 0;
+  }
+  .information__img-row {
+    flex: 0 0 80%;
+  }
+  .information__img {
+    flex: 0 0 50%;
+  }
+  .information__img img {
+    height: 170px;
   }
 }
 @media (max-width: 599px) {
@@ -310,6 +365,25 @@ h1, h2, h3, h4, h5, h6 {
   .menu__burger._active::after {
     bottom: 50%;
     transform: rotate(45deg) translate(0, 50%);
+  }
+  .information {
+    padding: 100px 0 0 0;
+  }
+  .information__text-text {
+    font-size: 18px;
+  }
+  .information__img-row {
+    flex-wrap: wrap;
+  }
+  .information__img {
+    flex: 0 0 100%;
+    padding: 0 0 20px 0;
+  }
+  .information__img:last-child {
+    padding: 0;
+  }
+  .information__img img {
+    height: 220px;
   }
 }
 body {
