--- a/for_applicants/css/style.css
+++ b/for_applicants/css/style.css
@@ -386,6 +386,63 @@ h1, h2, h3, h4, h5, h6 {
     height: 220px;
   }
 }
+.body {
+  flex-grow: 1;
+}
+
+.training-profile {
+  padding: 120px 30px;
+}
+.training-profile__title {
+  display: flex;
+  align-items: end;
+  padding: 0 0 30px 0;
+  margin: 0 -6px;
+}
+.training-profile__img {
+  padding: 0 6px;
+}
+.training-profile__img img {
+  width: 42px;
+  height: 42px;
+}
+.training-profile__text {
+  padding: 0 6px;
+  font-size: 30px;
+  color: #1d1d1d;
+  font-weight: 600;
+}
+.training-profile__profile {
+  font-size: 18px;
+  color: #0b2635;
+  font-weight: 500;
+  padding: 0 0 35px 0;
+}
+.training-profile__description {
+  padding: 16px 0;
+  border-top: solid 1px #0b2635;
+  border-bottom: solid 1px #0b2635;
+  line-height: 1.2;
+  font-family: "Montserrat", sans-serif;
+  color: #0b2635;
+}
+@media (min-width: 1800px) {
+  .training-profile__text {
+    font-size: 35px;
+  }
+  .training-profile__profile {
+    font-size: 20px;
+  }
+  .training-profile__description {
+    font-size: 16px;
+  }
+}
+@media (max-width: 599px) {
+  .training-profile__title {
+    align-items: start;
+  }
+}
+
 body {
   font-family: "Comfortaa", sans-serif;
 }
