--- a/for_applicants/scss/style.scss
+++ b/for_applicants/scss/style.scss
@@ -2,6 +2,7 @@
 @import "nullstyle";
 @import "header";
 @import "body";
+@import "footer";
 
 @mixin for-desktop-up {
   @media (min-width: 1800px) { @content; }
